# Blog-MCP-Server

./: .env.example  .gitignore  PROJECT_COMPLETION_REPORT.md  PROJECT_FINAL_REPORT.md  README.md  README_OLD.md  USAGE_GUIDE.md  mcp-settings.json  pyproject.toml  start_test.sh
blog_mcp_server/: __init__.py  config.py  content_server.py  guesthouse_server.py  management_server.py  media_server.py
blog_mcp_server/services/: ai_service.py  content_service.py
blog_mcp_server/templates/: blog_post.md.j2  guesthouse_plan.md.j2
blog_mcp_server/utils/: zola_utils.py
docs/: API_REFERENCE.md  CONTRIBUTING.md
tests/: test_ai_service.py  test_servers.py
